--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "zen-ui",
-  "version": "0.0.1",
+  "name": "@mattcfleming/zen-ui",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/mattcraigfleming"
+  },
+  "version": "0.0.2",
   "description": "Zen UI is a simple and extendible component library that gives you everything you need to build real world react applications.",
   "scripts": {
     "rollup": "rollup -c"
@@ -22,6 +25,7 @@
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
+  
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
