--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "version": "0.0.2",
   "description": "Zen UI is a simple and extendible component library that gives you everything you need to build real world react applications.",
   "scripts": {
-    "rollup": "rollup -c"
+    "rollup": "rollup -c",
+    "test": "jest"
   },
   "keywords": [
     "UI",
@@ -15,21 +16,35 @@
   "author": "mfleming2889@gmail.com",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.1",
+    "@types/jest": "^28.1.4",
     "@types/react": "^18.0.14",
+    "@types/styled-components": "^5.1.25",
+    "babel-loader": "^8.2.5",
+    "jest": "^28.1.2",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.75.7",
     "rollup-plugin-dts": "^4.2.2",
+    "styled-components": "^5.3.5",
+    "ts-jest": "^28.0.5",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
   },
-  
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "files": [
     "dist"
   ],
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
+  "dependencies": {
+    "jest-environment-jsdom": "^28.1.2"
+  }
 }
